sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:9: error: '(' expected but identifier found.
                        {if plusPetit(i+1,i){echange(i,i+1);x=true}
                            ^AlgCocktailSort1:10: error: illegal start of simple expression
                    }}}
                    ^